--- a/index/Main/index.html
+++ b/index/Main/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/TinyTaskCard.css">
     <link rel="stylesheet" href="./css/TaskFormularStyle.css">
     <link rel="stylesheet" href="./css/board.css">
+    <link rel="stylesheet" href="./css/help.css">
     <link rel="stylesheet" href="./css/signup.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/addTask.css">
@@ -44,6 +45,9 @@
     <script defer src="./js/declarations.js"></script>
     <script defer src="./js/contacts.js"></script>
     <script defer src="./js/addtask-edittask.js"></script>
+    <script defer src="./js/dragAndDrop-Mobile.js"></script>
+    <script defer src="./js/checkAccounts.js"></script>
+    <script defer src="./js/signUp.js"></script>
 
     <script defer src="./js/saveLoad.js"></script>
     <script defer src="./js/script.js"></script>
